Added message when content is added to the DB

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -2,6 +2,5 @@
 
   <h2>Messages</h2>
   <div *ngFor='let message of messageService.messages'> {{message}} </div>
-  <button class="clear"
-          (click)="messageService.clear()">clear</button>
+  <button class="clear" (click)="messageService.clear()">clear</button>
   </div>
